--- a/index.html
+++ b/index.html
@@ -1,29 +1,140 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <title>EdgeCDN 加速服务</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="EdgeCDN 提供全球加速服务，智能缓存，边缘节点访问，让您的站点快如闪电。">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>云加速CDN服务</title>
+  <!-- TailwindCSS & AlpineJS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
-<body>
-  <header>
-    <h1>EdgeCDN 边缘加速平台</h1>
-    <nav>
-      <a href="index.html">首页</a> |
-      <a href="about.html">关于我们</a> |
-      <a href="blog/">博客</a>
-    </nav>
-  </header>
-  <main>
-    <h2>全球智能节点调度</h2>
-    <p>我们的 CDN 通过 100+ 节点实现就近访问，延迟低至 10ms。</p>
-    <section id="cdn-status"></section>
-  </main>
-  <footer>
-    <p>&copy; 2025 EdgeCDN Inc.</p>
+<body class="font-sans text-gray-800">
+  <!-- Navbar -->
+  <nav class="bg-white shadow fixed w-full z-50" x-data="{ open: false }">
+    <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+      <a href="#home" class="text-2xl font-bold">云加速</a>
+      <div class="hidden md:flex space-x-6">
+        <a href="#home" class="hover:text-blue-600">首页</a>
+        <a href="#blog" class="hover:text-blue-600">博客</a>
+        <a href="#contact" class="hover:text-blue-600">联系我们</a>
+      </div>
+      <button class="md:hidden" @click="open = !open">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+    </div>
+    <!-- Mobile Menu -->
+    <div x-show="open" class="md:hidden bg-white">
+      <a href="#home" class="block px-4 py-2">首页</a>
+      <a href="#blog" class="block px-4 py-2">博客</a>
+      <a href="#contact" class="block px-4 py-2">联系我们</a>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section id="home" class="pt-20 bg-gradient-to-r from-blue-500 to-green-500 text-white py-20">
+    <div class="container mx-auto px-4 text-center">
+      <h1 class="text-4xl md:text-6xl font-bold mb-4">全球领先的云加速CDN服务</h1>
+      <p class="mb-8 text-lg md:text-xl">高性能、低延迟、万兆带宽，助力您的业务高速稳定运行</p>
+      <a href="#contact" class="bg-white text-blue-600 px-6 py-3 rounded-full font-medium hover:bg-gray-100">免费试用</a>
+    </div>
+  </section>
+
+  <!-- Features -->
+  <section class="container mx-auto px-4 py-16">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+      <div>
+        <img src="https://via.placeholder.com/64" alt="全球节点" class="mx-auto mb-4"/>
+        <h3 class="font-semibold mb-2">全球节点</h3>
+        <p>覆盖全球 200+ 节点，智能调度</p>
+      </div>
+      <div>
+        <img src="https://via.placeholder.com/64" alt="自主缓存" class="mx-auto mb-4"/>
+        <h3 class="font-semibold mb-2">自主缓存</h3>
+        <p>多层缓存策略，有效加速资源加载</p>
+      </div>
+      <div>
+        <img src="https://via.placeholder.com/64" alt="实时监控" class="mx-auto mb-4"/>
+        <h3 class="font-semibold mb-2">实时监控</h3>
+        <p>全面的流量监控与告警系统</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Blog Section -->
+  <section id="blog" class="bg-gray-50 py-16">
+    <div class="container mx-auto px-4">
+      <h2 class="text-3xl font-bold mb-8">最新博客</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <article class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-2xl font-semibold mb-2"><a href="#">如何优化网站性能</a></h3>
+          <p class="text-sm text-gray-500 mb-4">2025-05-28 | 技术探讨</p>
+          <p>本文介绍了常见的性能优化策略，包含缓存、压缩等技术。</p>
+        </article>
+        <article class="bg-white p-6 rounded-lg shadow">
+          <h3 class="text-2xl font-semibold mb-2"><a href="#">CDN 安全防护实践</a></h3>
+          <p class="text-sm text-gray-500 mb-4">2025-05-20 | 安全运维</p>
+          <p>深入分享如何对抗常见的 DDoS 攻击与缓存穿透。</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Form -->
+  <section id="contact" class="container mx-auto px-4 py-16">
+    <h2 class="text-3xl font-bold mb-4">联系我们</h2>
+    <form action="https://formspree.io/f/xdkgqdqo" method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <input type="text" name="name" placeholder="姓名" required class="p-3 border rounded"/>
+      <input type="email" name="_replyto" placeholder="邮箱" required class="p-3 border rounded"/>
+      <textarea name="message" placeholder="留言内容" required class="p-3 border rounded md:col-span-2"></textarea>
+      <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded-full md:col-span-2 hover:bg-blue-700">发送</button>
+    </form>
+  </section>
+
+  <!-- Map Embed -->
+  <section class="container mx-auto px-4 py-16">
+    <h2 class="text-3xl font-bold mb-4">我们的地址</h2>
+    <div class="w-full h-64 rounded overflow-hidden">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d755.261296517902!2d-73.97741390372643!3d40.78302074600113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25888b2a55555%3A0xac07bef1e6a646ad!2sAffirmed%20Systems!5e0!3m2!1szh-CN!2sus!4v1748432148846!5m2!1szh-CN!2sus"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-gray-300 py-6">
+    <div class="container mx-auto px-4 text-center">
+      <p>&copy; 2025 云加速科技有限公司</p>
+    </div>
   </footer>
-  <script src="assets/js/main.js"></script>
 </body>
 </html>
+
+<!-- simulate.sh -->
+#!/usr/bin/env bash
+# 定义要访问的 URL
+HOST="https://your-cdn-domain.com"
+URLS=("$HOST" "$HOST/blog" "$HOST/contact")
+for path in "${URLS[@]}"; do
+  curl -s "$path" > /dev/null
+  sleep 2
+done
+
+<!-- .github/workflows/ping.yml -->
+name: 定时 Ping 伪装域名
+on:
+  schedule:
+    - cron: '0 * * * *' # 每小时执行一次
+jobs:
+  ping:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Ping 服务
+        run: |
+          curl -s https://your-cdn-domain.com > /dev/null
+          curl -s https://your-cdn-domain.com/blog > /dev/null
+          curl -s https://your-cdn-domain.com/contact > /dev/null
