--- a/index.html
+++ b/index.html
@@ -45,26 +45,55 @@
     </div>
   </section>
 
-  <!-- Features -->
-  <section class="container mx-auto px-4 py-16">
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-      <div>
-        <img src="https://via.placeholder.com/64" alt="全球节点" class="mx-auto mb-4 w-16 h-16 object-contain"/>
-        <h3 class="font-semibold mb-2">全球节点</h3>
-        <p>覆盖全球 200+ 节点，智能调度</p>
-      </div>
-      <div>
-        <img src="https://via.placeholder.com/64" alt="自主缓存" class="mx-auto mb-4 w-16 h-16 object-contain"/>
-        <h3 class="font-semibold mb-2">自主缓存</h3>
-        <p>多层缓存策略，有效加速资源加载</p>
-      </div>
-      <div>
-        <img src="https://via.placeholder.com/64" alt="实时监控" class="mx-auto mb-4 w-16 h-16 object-contain"/>
-        <h3 class="font-semibold mb-2">实时监控</h3>
-        <p>全面的流量监控与告警系统</p>
-      </div>
+<!-- Features -->
+<section class="container mx-auto px-4 py-16">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+    <!-- 全球节点 -->
+    <div>
+      <!-- Heroicons: globe-alt -->
+      <svg xmlns="http://www.w3.org/2000/svg"
+           class="mx-auto mb-4 w-16 h-16 text-blue-500"
+           fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M12 2a10 10 0 100 20 10 10 0 000-20z"/>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M2 12h20M12 2c2.21 4.42 2.21 8.58 0 13M12 2c-2.21 4.42-2.21 8.58 0 13"/>
+      </svg>
+      <h3 class="font-semibold mb-2">全球节点</h3>
+      <p>覆盖全球 200+ 节点，智能调度</p>
     </div>
-  </section>
+
+    <!-- 自主缓存 -->
+    <div>
+      <!-- Heroicons: database -->
+      <svg xmlns="http://www.w3.org/2000/svg"
+           class="mx-auto mb-4 w-16 h-16 text-green-500"
+           fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M4 6v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6"/>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M4 6c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2M4 10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2"/>
+      </svg>
+      <h3 class="font-semibold mb-2">自主缓存</h3>
+      <p>多层缓存策略，有效加速资源加载</p>
+    </div>
+
+    <!-- 实时监控 -->
+    <div>
+      <!-- Heroicons: chart-bar -->
+      <svg xmlns="http://www.w3.org/2000/svg"
+           class="mx-auto mb-4 w-16 h-16 text-purple-500"
+           fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 3v18h18"/>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M18 9l-3 3-2-2-4 4-2-2"/>
+      </svg>
+      <h3 class="font-semibold mb-2">实时监控</h3>
+      <p>全面的流量监控与告警系统</p>
+    </div>
+  </div>
+</section>
 
   <!-- Blog Section -->
   <section id="blog" class="bg-gray-50 py-16">
