--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <a href="#blog" class="hover:text-blue-600">博客</a>
         <a href="#contact" class="hover:text-blue-600">联系我们</a>
         <a href="/speedtest/" class="hover:text-blue-600">测速</a>
+        <a href="/api/metrics.json" class="hover:text-blue-600">CDN 统计 / Metrics</a>
+        <a href="/status.html" class="hover:text-blue-600">服务状态 / Status</a>
+        <a href="/edge-nodes.html" class="hover:text-blue-600">全球节点 / Edge Nodes</a>
       </div>
     </div>
   </nav>
