--- a/edge-nodes.html
+++ b/edge-nodes.html
@@ -1,23 +1,70 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <title>全球节点列表</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>全球节点分布</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body class="bg-gray-50 text-gray-800">
-  <div class="max-w-3xl mx-auto py-12 px-6">
-    <h1 class="text-3xl font-bold mb-6">全球节点列表</h1>
-    <ul class="list-disc pl-6 space-y-2 text-lg">
-      <li>新加坡节点</li>
-      <li>香港节点</li>
-      <li>东京节点</li>
-      <li>洛杉矶节点</li>
-      <li>法兰克福节点</li>
-      <li>悉尼节点</li>
-      <li>孟买节点</li>
-    </ul>
+<body class="bg-gray-50 text-gray-800 font-sans">
+  <div class="max-w-4xl mx-auto px-4 py-12">
+    <h1 class="text-4xl font-bold text-center mb-6">🌍 全球节点分布</h1>
+
+    <div class="bg-white shadow p-6 rounded mb-6">
+      <canvas id="continentChart" height="300"></canvas>
+    </div>
+
+    <div class="bg-white shadow p-6 rounded">
+      <canvas id="countryChart" height="300"></canvas>
+    </div>
+
+    <p class="mt-8 text-center text-sm text-gray-500">数据来源：<code>/api/edge_nodes.json</code></p>
   </div>
+
+  <script>
+    // 模拟数据
+    const continentData = {
+      labels: ["北美", "欧洲", "亚洲", "大洋洲", "南美", "非洲"],
+      datasets: [{
+        label: "节点数量",
+        data: [72, 61, 49, 12, 11, 8],
+        backgroundColor: ["#3b82f6", "#10b981", "#f59e0b", "#8b5cf6", "#ec4899", "#f87171"]
+      }]
+    };
+
+    const countryData = {
+      labels: ["美国", "德国", "日本", "新加坡", "英国", "中国香港", "巴西"],
+      datasets: [{
+        label: "节点数量",
+        data: [45, 22, 20, 14, 12, 11, 9],
+        backgroundColor: "#3b82f6"
+      }]
+    };
+
+    new Chart(document.getElementById('continentChart'), {
+      type: 'bar',
+      data: continentData,
+      options: {
+        responsive: true,
+        plugins: {
+          legend: { display: false },
+          title: { display: true, text: '按大洲统计' }
+        }
+      }
+    });
+
+    new Chart(document.getElementById('countryChart'), {
+      type: 'bar',
+      data: countryData,
+      options: {
+        responsive: true,
+        plugins: {
+          legend: { display: false },
+          title: { display: true, text: '按国家/地区统计' }
+        }
+      }
+    });
+  </script>
 </body>
 </html>
