--- a/edge-nodes.html
+++ b/edge-nodes.html
@@ -22,10 +22,10 @@
   <!-- 图表渲染逻辑 -->
   <script>
     const countryData = {
-      labels: ['中国', '大洋洲', '新加坡', '非洲', '美国', '中东', '日本', '德国', '香港', '韩国'],
+      labels: ['中国', '新加坡', '美国', '日本', '德国', '香港', '韩国'],
       datasets: [{
         label: '国家节点数',
-        data: [45, 20, 20, 3, 20, 15, 13, 12, 10, 8],
+        data: [45, 20, 20, 13, 12, 10, 8],
         backgroundColor: '#6366f1'
       }]
     };
