--- a/index.html
+++ b/index.html
@@ -107,6 +107,16 @@
     </form>
   </section>
 
+  <!-- System Status Section -->
+<section id="status" class="container mx-auto px-4 py-16">
+  <h2 class="text-3xl font-bold mb-6">🌐 系统运行状态 / System Status</h2>
+  <ul class="space-y-4 text-lg">
+    <li>🇸🇬 新加坡 / Singapore Node: <span class="text-green-600 font-semibold">在线 / Online</span></li>
+    <li>🇺🇸 洛杉矶 / Los Angeles Node: <span class="text-green-600 font-semibold">在线 / Online</span></li>
+    <li>🇩🇪 法兰克福 / Frankfurt Node: <span class="text-green-600 font-semibold">在线 / Online</span></li>
+  </ul>
+</section>
+
   <!-- Map Embed -->
   <section class="container mx-auto px-4 py-16">
     <h2 class="text-3xl font-bold mb-4">我们的地址</h2>
