--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="/speedtest/" class="hover:text-blue-600">测速</a>
     <a href="/metrics.html" class="hover:text-blue-600">CDN统计</a>
     <a href="/edge-nodes.html" class="hover:text-blue-600">全球节点</a>
-    <a href="#status" class="hover:text-blue-600">系统状态</a> 
+    <a href="/status.html" class="hover:text-blue-600">系统状态</a>
   </div>
 </div>
   </nav>
@@ -106,16 +106,6 @@
       <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded-full md:col-span-2 hover:bg-blue-700">发送</button>
     </form>
   </section>
-
-  <!-- System Status Section -->
-<section id="status" class="container mx-auto px-4 py-16">
-  <h2 class="text-3xl font-bold mb-6">🌐 系统运行状态 / System Status</h2>
-  <ul class="space-y-4 text-lg">
-    <li>🇸🇬 新加坡 / Singapore Node: <span class="text-green-600 font-semibold">在线 / Online</span></li>
-    <li>🇺🇸 洛杉矶 / Los Angeles Node: <span class="text-green-600 font-semibold">在线 / Online</span></li>
-    <li>🇩🇪 法兰克福 / Frankfurt Node: <span class="text-green-600 font-semibold">在线 / Online</span></li>
-  </ul>
-</section>
 
   <!-- Map Embed -->
   <section class="container mx-auto px-4 py-16">
