--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <a href="/metrics.html" class="hover:text-blue-600">CDN统计</a>
     <a href="/edge-nodes.html" class="hover:text-blue-600">全球节点</a>
     <a href="/status.html" class="hover:text-blue-600">系统状态</a>
+    <a href="/changelog.html" class="hover:text-blue-600">更新日志</a>
   </div>
 </div>
   </nav>
