--- a/index.html
+++ b/index.html
@@ -84,12 +84,16 @@
       <h2 class="text-3xl font-bold mb-8">最新博客</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <article class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-2xl font-semibold mb-2"><a href="#">如何优化网站性能</a></h3>
+          <h3 class="text-2xl font-semibold mb-2">
+            <a href="/post-20250528.html" class="hover:underline">如何优化网站性能</a>
+          </h3>
           <p class="text-sm text-gray-500 mb-4">2025-05-28 | 技术探讨</p>
           <p>本文介绍了常见的性能优化策略，包含缓存、压缩等技术。</p>
         </article>
         <article class="bg-white p-6 rounded-lg shadow">
-          <h3 class="text-2xl font-semibold mb-2"><a href="#">CDN 安全防护实践</a></h3>
+          <h3 class="text-2xl font-semibold mb-2">
+             <a href="/post-20250520.html" class="hover:underline">CDN 安全防护实践</a>
+          </h3>
           <p class="text-sm text-gray-500 mb-4">2025-05-20 | 安全运维</p>
           <p>深入分享如何对抗常见的 DDoS 攻击与缓存穿透。</p>
         </article>
